# clawworld

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: README.md  on-code-change.mjs
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  builder.py  explorer.py  farmer.py  guardian.py  healer.py  scholar.py  trader.py
clawworld/: __init__.py  __main__.py  auth.py  db.py  genesis.py  server.py
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/openclaw-plugin/: README.md  openclaw.plugin.json  package.json  tsconfig.json
cli/openclaw-plugin/src/: cli.ts  gateway.ts  http.ts  index.ts  plugin-registration.ts  tool.ts
cli/src/: cli.ts
cli/src/api/: client.ts
cli/src/commands/: config.ts  connect.ts  join.ts  status.ts  world.ts
cli/src/sandbox/: crypto.ts  (+2 more)
docs/: ARCHITECTURE.md  DEPLOY.md  INSTALL.md
server/: package-lock.json  package.json  tsconfig.json
server/src/: api.ts  attributes.ts  auth.ts  config.ts  db-postgres-schema.sql  db.ts  genesis.ts  god-agent.ts  god-coordinator.ts  god-data.ts  god-memory.ts  god-triggers-data.ts  hook-rules.ts  hooks.ts  index.ts  mcp.ts  oauth.ts  permissions.ts  session-log.ts  tool-interface.ts  tools.ts  types.ts
simulation/: __init__.py  engine.py
tests/: test_agents.py  test_simulation.py  test_world.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css
world/: __init__.py  resources.py  terrain.py  world.py
(+22 files in other folders)
