[project]
name = "clawworld"
version = "0.1.0-genesis"
description = "A multiplayer LLM agent society where Claude users spawn lobsters that live, work, and earn in a shared world."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "newEarth contributors" }
]
keywords = ["claude", "mcp", "agent", "simulation", "lobster"]

dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
clawworld = "clawworld.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawworld"]

[tool.ruff]
line-length = 100
target-version = "py311"
